--- a/indexgit.html
+++ b/indexgit.html
@@ -1,4 +1,5 @@
-<<!DOCTYPE html>
+<!-- git this branched has been repair by yash -->
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -7,6 +8,6 @@
     <title>contact</title>
 </head>
 <body>
-    <p>loren244</p>
+    <p>loren24</p>
 </body>
-</html>>
+</html>
